--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,34 @@
-# Contents of .gitignore
-*.com
-*.class
+# ---------- General compiled outputs ----------
 *.exe
 *.dll
-*o
-*so
-build/
+*.lib
+*.obj
+*.o
+*.so
+*.class
+*.com
 
+# ---------- MSVC / Visual Studio build artifacts ----------
+*.exp
+*.pdb
+*.ilk
+*.idb
+*.pch
+*.ipch
+*.tlog
+*.log
+*.VC.db
+*.opendb
+*.suo
+*.user
+
+# ---------- Build / output folders ----------
+build/
+out/
+bin/
+obj/
+Debug/
+Release/
+x64/
+Win32/
+.vs/
