Worksheet 5 Exercise 1: Doxygen config and comments

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 *.com
 # Don't commit zip submissions
 *.zip
+# Doxygen output
+html/
+Worksheet5/html/
+
 
 # ---------- MSVC / Visual Studio build artifacts ----------
 *.exp
